--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,53 @@
-*.rbc
-*.sassc
 .sass-cache
-capybara-*.html
-.rspec
-/.bundle
-/vendor/bundle
+/COPYING
+/CREDITS
+/FAQ
+/HISTORY
+/INSTALL
+/LocalSettings.php
+/README
+/RELEASE-NOTES-1.20
+/StartProfiler.sample
+/UPGRADE
+/api.php
+/api.php5
+/bin
 /log/*
 /tmp/*
-/db/*.sqlite3
-/public/system/*
-/coverage/
-/spec/tmp/*
-**.orig
-rerun.txt
-pickle-email-*.html
+/cache
+/conf
+/docs
+/extensions
+/images
+/languages
+/img_auth.php
+/img_auth.php5
+/includes
+/*.php*
+/*.phtml
+/maintenance
+/mw-config
+/resources
+/serialized
+/skins
+/tests
+
+/skins/Chick.php
+/skins/CologneBlue.php
+/skins/Modern.php
+/skins/MonoBook.php
+/skins/MySkin.php
+/skins/Nostalgia.php
+/skins/Simple.php
+/skins/Standard.php
+/skins/Vector.php
+/skins/chick
+/skins/cologneblue
+/skins/common
+/skins/modern
+/skins/monobook
+/skins/myskin
+/skins/nostalgia
+/skins/simple
+/skins/standard
+/skins/vector
